<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullVersionActivity">

    <Button
        android:id="@+id/pointButton"
        android:layout_width="117dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addNewMarker"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/removePointButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude2" />

    <Button
        android:id="@+id/onSecureButton"
        android:layout_width="125dp"
        android:layout_height="82dp"
        android:layout_marginTop="96dp"
        android:text="@string/onSecurity"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:text="@string/latitude"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingTV" />

    <TextView
        android:id="@+id/latitude2"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:text="@string/longitude"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude2" />

    <TextView
        android:id="@+id/longitude2"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/greetingTV"
        android:layout_width="186dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/logoutTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutTV"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/logoutTV"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="134dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/information"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointButton"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/distTV"
        android:layout_width="142dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/greetingTV"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingTV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/removePointButton"
        android:layout_width="125dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/removePoint"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude2" />

    <Button
        android:id="@+id/removeUserButton"
        android:layout_width="154dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/removeUser"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/infoButton"
        app:layout_constraintTop_toBottomOf="@+id/pointButton"
        app:layout_constraintVertical_bias="0.494" />

</androidx.constraintlayout.widget.ConstraintLayout>